--- a/foo_traycontrols.rc
+++ b/foo_traycontrols.rc
@@ -4,6 +4,9 @@
 // Tray icon
 IDI_TRAY_ICON           ICON    "tray_icon.ico"
 
+// Internet radio icon for popup notifications
+IDI_RADIO_ICON          ICON    "iradio.ico"
+
 // PNG version as binary resource (fallback)
 IDR_TRAY_PNG            RCDATA  "tray_icon.png"
 
