--- a/foo_traycontrols.rc
+++ b/foo_traycontrols.rc
@@ -7,6 +7,12 @@ IDI_TRAY_ICON           ICON    "tray_icon.ico"
 // Internet radio icon for popup notifications
 IDI_RADIO_ICON          ICON    "iradio.ico"
 
+// Control panel icons
+IDI_PLAY_ICON           ICON    "play_icon.ico"
+IDI_PAUSE_ICON          ICON    "pause_icon.ico"
+IDI_PREVIOUS_ICON       ICON    "previous_icon.ico"
+IDI_NEXT_ICON           ICON    "next_icon.ico"
+
 // PNG version as binary resource (fallback)
 IDR_TRAY_PNG            RCDATA  "tray_icon.png"
 
@@ -22,6 +28,6 @@ BEGIN
     CONTROL         "Show popup notification on track change", IDC_SHOW_POPUP_NOTIFICATION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 55, 200, 10
     
     GROUPBOX        "Information", IDC_STATIC, 7, 115, 286, 50
-    LTEXT           "Tray Controls v1.0.8", IDC_STATIC, 15, 130, 100, 8
+    LTEXT           "Tray Controls v1.0.9", IDC_STATIC, 15, 130, 100, 8
     LTEXT           "Single-click the tray icon for playback controls.", IDC_STATIC, 15, 145, 200, 8
 END
