--- a/foo_traycontrols.rc
+++ b/foo_traycontrols.rc
@@ -37,12 +37,13 @@ BEGIN
     CONTROL         "When enabled, prevents the control panel from being undocked (dragged).", IDC_STATIC_MINIPLAYER_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 135, 270, 8
     
     // Slide-to-Side Options
-    CONTROL         "Disable Slide-to-Side animation", IDC_DISABLE_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 150, 200, 10
-    LTEXT           "Slide Speed:", IDC_SLIDE_DURATION_LABEL, 15, 168, 50, 10
+    CONTROL         "Disable Slide-to-Side", IDC_DISABLE_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 150, 200, 10
+    LTEXT           "Slide Animation:", IDC_SLIDE_DURATION_LABEL, 15, 168, 50, 10
     COMBOBOX        IDC_SLIDE_DURATION_COMBO, 70, 166, 80, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Always Slide-to-Side", IDC_ALWAYS_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 182, 200, 10
 
     // Window Style Options
-    CONTROL         "Use rounded corners (Windows 11 only)", IDC_USE_ROUNDED_CORNERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 190, 200, 10
+    CONTROL         "Use rounded corners (Windows 11 only)", IDC_USE_ROUNDED_CORNERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 197, 200, 10
 
     // === Fonts Tab Controls (hidden initially) ===
     
