--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,4 +12,4 @@ lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cl
 polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 thanks_dev: # Replace with a single thanks.dev username
-custom: # https://buy.stripe.com/9B64gy4Wt16T6gD18F1sQ00
+custom: https://buy.stripe.com/9B64gy4Wt16T6gD18F1sQ00
