--- a/foo_traycontrols.rc
+++ b/foo_traycontrols.rc
@@ -25,27 +25,35 @@ BEGIN
     CONTROL         "", IDC_TAB_CONTROL, "SysTabControl32", 0, 7, 7, 286, 286
 
     // === General Tab Controls (shown by default) ===
-    CONTROL         "Always minimize to system tray", IDC_ALWAYS_MINIMIZE_TO_TRAY, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 35, 200, 10
-    CONTROL         "When enabled, clicking minimize sends foobar2000 directly to the system tray.", IDC_STATIC_MINIMIZE_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 50, 270, 8
-    CONTROL         "Mouse wheel over tray icon adjusts volume.", IDC_STATIC_WHEEL_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 62, 270, 8
-    CONTROL         "Show popup notification on track change", IDC_SHOW_POPUP_NOTIFICATION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 80, 200, 10
-    LTEXT           "Position:", IDC_POPUP_POSITION_LABEL, 15, 98, 35, 10
-    COMBOBOX        IDC_POPUP_POSITION_COMBO, 55, 96, 80, 120, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Duration:", IDC_POPUP_DURATION_LABEL, 145, 98, 35, 10
-    COMBOBOX        IDC_POPUP_DURATION_COMBO, 185, 96, 60, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Disable MiniPlayer", IDC_DISABLE_MINIPLAYER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 120, 200, 10
-    CONTROL         "When enabled, prevents the control panel from being undocked (dragged).", IDC_STATIC_MINIPLAYER_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 135, 270, 8
-    
+
+    // Display Format
+    GROUPBOX        "Display Format", IDC_DISPLAY_FORMAT_GROUP, 12, 26, 272, 50
+    LTEXT           "Line 1:", IDC_LINE1_FORMAT_LABEL, 20, 40, 28, 12
+    EDITTEXT        IDC_LINE1_FORMAT_EDIT, 52, 38, 224, 14, ES_AUTOHSCROLL
+    LTEXT           "Line 2:", IDC_LINE2_FORMAT_LABEL, 20, 56, 28, 12
+    EDITTEXT        IDC_LINE2_FORMAT_EDIT, 52, 54, 224, 14, ES_AUTOHSCROLL
+
+    CONTROL         "Always minimize to system tray", IDC_ALWAYS_MINIMIZE_TO_TRAY, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 90, 200, 10
+    CONTROL         "When enabled, clicking minimize sends foobar2000 directly to the system tray.", IDC_STATIC_MINIMIZE_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 105, 270, 8
+    CONTROL         "Mouse wheel over tray icon adjusts volume.", IDC_STATIC_WHEEL_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 117, 270, 8
+    CONTROL         "Show popup notification on track change", IDC_SHOW_POPUP_NOTIFICATION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 135, 200, 10
+    LTEXT           "Position:", IDC_POPUP_POSITION_LABEL, 15, 153, 35, 10
+    COMBOBOX        IDC_POPUP_POSITION_COMBO, 55, 151, 80, 120, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Duration:", IDC_POPUP_DURATION_LABEL, 145, 153, 35, 10
+    COMBOBOX        IDC_POPUP_DURATION_COMBO, 185, 151, 60, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Disable MiniPlayer", IDC_DISABLE_MINIPLAYER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 175, 200, 10
+    CONTROL         "When enabled, prevents the control panel from being undocked (dragged).", IDC_STATIC_MINIPLAYER_HELP, "Static", SS_LEFT | SS_NOPREFIX, 15, 190, 270, 8
+
     // Slide-to-Side Options
-    CONTROL         "Disable Slide-to-Side", IDC_DISABLE_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 150, 200, 10
-    LTEXT           "Slide Animation:", IDC_SLIDE_DURATION_LABEL, 15, 168, 50, 10
-    COMBOBOX        IDC_SLIDE_DURATION_COMBO, 70, 166, 80, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Always Slide-to-Side", IDC_ALWAYS_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 182, 200, 10
+    CONTROL         "Disable Slide-to-Side", IDC_DISABLE_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 205, 200, 10
+    LTEXT           "Slide Animation:", IDC_SLIDE_DURATION_LABEL, 15, 223, 50, 10
+    COMBOBOX        IDC_SLIDE_DURATION_COMBO, 70, 221, 80, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Always Slide-to-Side", IDC_ALWAYS_SLIDE_TO_SIDE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 237, 200, 10
 
     // Window Style Options
-    CONTROL         "Use rounded corners (Windows 11 only)", IDC_USE_ROUNDED_CORNERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 197, 200, 10
-    LTEXT           "Theme Mode:", IDC_THEME_MODE_LABEL, 15, 215, 50, 10
-    COMBOBOX        IDC_THEME_MODE_COMBO, 70, 213, 40, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Use rounded corners (Windows 11 only)", IDC_USE_ROUNDED_CORNERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 15, 252, 200, 10
+    LTEXT           "Theme Mode:", IDC_THEME_MODE_LABEL, 15, 270, 50, 10
+    COMBOBOX        IDC_THEME_MODE_COMBO, 70, 268, 40, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
 
 
     // === Fonts Tab Controls (hidden initially) ===
