--- a/foo_traycontrols.vcxproj
+++ b/foo_traycontrols.vcxproj
@@ -251,6 +251,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="artwork_bridge.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -261,6 +267,7 @@
     <ClInclude Include="volume_popup.h" />
     <ClInclude Include="svg_icon.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="artwork_bridge.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="foo_traycontrols.rc" />
